[[:Kategorie:Keunst]] weg-ehaald; [[:Kategorie:Kunstperiode]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Romantik_(strouming).mw
+++ b/Romantik_(strouming).mw
@@ -31,4 +31,4 @@ De Romantik is van oorsprüng een teagendrådske reakty up de [[Verlichting]], d
  {{Dialekt|sdz|[[Vechte|'t Vechtdal]]|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Filosofische stroming]]
-[[Kategorie:Keunst]]
+[[Kategorie:Kunstperiode]]
