[[:Kategorie:Keunst]] weg-ehaald; [[:Kategorie:Beeldende keunst]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Stientje_(standbeeld).mw
+++ b/Stientje_(standbeeld).mw
@@ -7,5 +7,5 @@ Stientje is een typisch [[Nedersaksische veurnamen|Veluwse naam]] die oek in Hie
 *[http://www.deweekkrant.nl/artikel/2009/april/21/boerin_stientje_trots_en_fier_op_rotonde_hierden Boerin Stientje op de retonde in Hierden]
 
 [[Kategorie:West-Veluws_artikel]]
-[[Kategorie:Keunst]]
+[[Kategorie:Beeldende keunst]]
 [[Kategorie:Harderwiek]]
