--- a/Varve.mw
+++ b/Varve.mw
@@ -34,4 +34,4 @@ Varve wönnen veural vrogger zo emaak, disse pigmenten wönnen dan vermingd mit 
 |}
 
 [[Kategorie:West-Veluws artikel]]
-[[Kategorie:Keunst]]
+[[Kategorie:Beeldende keunst]]
