[[:Kategorie:Keunst]] weg-ehaald; [[:Kategorie:Beeldende keunst]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Wildkunst.mw
+++ b/Wildkunst.mw
@@ -18,5 +18,5 @@ Enkele bekende künstenaars bint [[Robert Bateman]], [[Rien Poortvliet]], en ver
 
 {{Dialekt|sdz|[[Hardenbarg (gemiente)|'n Arnbarreg]]}}
 
-[[Kategorie:Keunst]]
+[[Kategorie:Beeldende keunst]]
 [[Kategorie:Natuur]]
