−[[Kategorie:Wikipedie:Gin Kattegerie]]; +[[Kategorie:Graofschop Benthem]]; +[[Kategorie:Beeldende keunst]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Krüüs_van_Bentheim.mw
+++ b/Krüüs_van_Bentheim.mw
@@ -13,4 +13,5 @@ In [[1828]] hebbed sy et krüüs up een akker körtby [[Schulte-Kolthoff]] evün
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Graofschop Benthem]]
+[[Kategorie:Beeldende keunst]]
