[[:Kategorie:Wikipedie:Gin Kattegerie]] weg-ehaald; [[:Kategorie:Huushoolding]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Götstien.mw
+++ b/Götstien.mw
@@ -22,4 +22,4 @@ In [[Vlaanderen]] nuumt ze de götstien ook wel pompbak, in Limburg pómpestein.
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Huushoolding]]
