[[:Kategorie:Zoogdier]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Geer.mw
+++ b/Geer.mw
@@ -25,3 +25,4 @@ Elk deel van de geer het n eigen melkstelsel en melkboezem. Bie de [[ko]]e is de
 {{Dialekt|wvel|Putten|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Dierenanatomie]]
+[[Kategorie:Zoogdier]]
