--- a/Station_Lechtenvoorde-Grolle.mw
+++ b/Station_Lechtenvoorde-Grolle.mw
@@ -6,5 +6,5 @@
 Tot 1999 reedn de [[NS]] op disse liene, tot 2012 reed [[Syntus]] en sinds dee tied voert [[Arriva]] den dienst oet. Op warkdage tot 19.00 uur en op zaterdagmeddag ridt er elk half uur nen trein in beide richtingen. Op andere tieden is ter 'n uurdienst.
 
 [[Kategorie:Achterhooks_artikel]]
-[[Kategorie:Spoorwegstation in Gelderlaand]]
+[[Kategorie:Spoorwegstation in Gelderlaand|Lechtenvoorde-Grolle]]
 [[Kategorie:Achterhook]]
