[[:Kategorie:Achterhook]] weg-ehaald; [[:Kategorie:Oost Gelre]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Station_Lechtenvoorde-Grolle.mw
+++ b/Station_Lechtenvoorde-Grolle.mw
@@ -7,4 +7,4 @@ Tot 1999 reedn de [[NS]] op disse liene, tot 2012 reed [[Syntus]] en sinds dee t
 
 [[Kategorie:Achterhooks_artikel]]
 [[Kategorie:Spoorwegstation in Gelderlaand|Lechtenvoorde-Grolle]]
-[[Kategorie:Achterhook]]
+[[Kategorie:Oost Gelre]]
