[[:Kategorie:Biologie]] weg-ehaald; [[:Kategorie:Zoogdier]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Mense.mw
+++ b/Mense.mw
@@ -31,4 +31,4 @@ Meansen bint, ewen-as de mieste aandere primaten, sociaal van eerd. Zi'j bint bi
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Biologie]]
+[[Kategorie:Zoogdier]]
