Sortering van [[:Kategorie:Vene]] anpasd naor " " ([[Wikipedia:HotCat|HotCat.js]])

--- a/Vene_(grondsoorte).mw
+++ b/Vene_(grondsoorte).mw
@@ -146,4 +146,4 @@ Ok veur de anleg van wegen en speurlienden wodt de waeterstand soms leger emeuke
 {{Dia|Dit stok is eskreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
-[[Kategorie:Vene]]
+[[Kategorie:Vene| ]]
