*Empty MediaWiki Message*

--- a/Veendaam.mw
+++ b/Veendaam.mw
@@ -31,6 +31,7 @@ De gemainte Veendaam omvat de volgende ploatsen: [[Boareveld]], [[Börkomnij]], 
 * [[Niels Scheuneman]] (21 december 1983), Nederlands roadler
 * [[Richard Veenstra]] (29 juni 1981), Nederlaands komponist
 
+<references/>
 {{dia|Schreven in t [[Veenkelonioals]]}}
 {{GemaintesGrunnen}}
 
