--- a/Huys_ter_Warmond.mw
+++ b/Huys_ter_Warmond.mw
@@ -15,3 +15,4 @@ Duur huwelek en verarving wisselenden et huus meerdere moalen van eigenoar, en w
 
 [[Kategorie:Achterhooks_artikel]]
 [[Kategorie:Kastele in Nederlaand]]
+[[Kategorie:Zuud-Hollaand]]
