--- a/Rokoko.mw
+++ b/Rokoko.mw
@@ -48,3 +48,4 @@ In de [[muzeekgeskiednis]] verstoat zie under Rokoko den stiel den zich untwekke
 
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Kultuur]]
+[[Kategorie:Vrogmoderne tied]]
