[[:Kategorie:Kultuur]] weg-ehaald; [[:Kategorie:Nedersaksiese kultuur]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Nedersaksië.mw
+++ b/Nedersaksië.mw
@@ -13,4 +13,4 @@ In ''Nedersaksisch in een notendop: Inleiding in de Nedersaksische taal en liter
 <references />
 
 [[Kategorie:Stellingwarfs_artikel]]
-[[Kategorie:Kultuur]]
+[[Kategorie:Nedersaksiese kultuur]]
