−[[Kategorie:Kultuur]]; +[[Kategorie:Tekenaar]]; +[[Kategorie:Geschiedenis van Nederlaand]]; +[[Kategorie:Vrogmoderne tied]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Jan_de_Beijer.mw
+++ b/Jan_de_Beijer.mw
@@ -25,4 +25,6 @@ Warken van Jan de Beijer wodt onder meer bewoard in:
 
 {{DEFAULTSORT:Beijer, Jan De}}
 [[Kategorie:Achterhooks artikel]]
-[[Kategorie:Kultuur]]
+[[Kategorie:Tekenaar]]
+[[Kategorie:Geschiedenis van Nederlaand]]
+[[Kategorie:Vrogmoderne tied]]
