[[:Kategorie:Architect]] weg-ehaald; [[:Kategorie:Architekt]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Michelangelo.mw
+++ b/Michelangelo.mw
@@ -22,5 +22,5 @@ File:Michelangelo's Pieta 5450 cut out black.jpg|
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Skilder]]
 [[Kategorie:Beeldhouwer]]
-[[Kategorie:Architect]]
+[[Kategorie:Architekt]]
 [[Kategorie:Renaissance]]
