--- a/Architektuur.mw
+++ b/Architektuur.mw
@@ -4,4 +4,4 @@
 Een beoefener van de architektuur hiet deurgaons een ''architekt''.
 
 [[Kategorie:Stellingwarfs artikel]]
-[[Kategorie:Architektuur]]
+[[Kategorie:Architektuur| ]]
