*Empty MediaWiki Message*

--- a/Walter_Sutherland.mw
+++ b/Walter_Sutherland.mw
@@ -1,6 +1,6 @@
-'''Walter Sutherland''' (uut de tied c. [[1850]]) was de lest bekende sprekker van de [[Noord-Germaanse talen|Noord-Germaanse]] tääl [[Norn (sproake)|Norn]]. Vrogger wier et esprökken op de [[Shetlaand eilaanden]], [[Orkney]] en [[Caithness]]. De [[Schotlaand|Schot]] kwamp weg van [[Skaw (Schotlaand)|Skaw]] wat op et eilaand [[Unst (eilaand)|Unst]] lig. Unst beheurd töt de [[Shetlaand]]eilaanden.
+'''Walter Sutherland''' (uut de tied c. [[1850]]) was de lest bekende sprekker van de [[Noord-Germaanse talen|Noord-Germaanse]] tääl [[Norn (sproake)|Norn]]. Vrogger wier et esprökken op de [[Shetlaand]]eilaanden, [[Orkney]] en [[Caithness]]. De [[Schotlaand|Schot]] kwamp weg van [[Skaw (Schotlaand)|Skaw]] wat op et eilaand [[Unst (eilaand)|Unst]] lig. Unst beheurd töt de [[Shetlaand]]eilaanden.
 
-Meugelik waren er op et eilaand [[Foula]] ook nog Norn sprekkers wied läter dan midden [[19e eeuw]]. Disse onbenuumde sprekkers bint deur [[Jakob Jakobsen]] rapporteerd. Dit zol Walter Sutherland töt de leste Norn sprekker mäken op et eilaand Unst<ref>P. Sture Ureland, George Broderick, eds., ''Language contact in the British Isles: proceedings of the Eighth International Symposium on Language Contact in Europe, Douglas, Isle of Man, 1988'' (M. Niemeyer, 1991), p. 455</ref>. 
+Meugelik waren er op et eilaand [[Foula]] ook nog Norn sprekkers wied nå et midden van de [[19e eeuw]]. Disse onbenuumde sprekkers bint deur [[Jakob Jakobsen]] rapporteerd. Dit zol Walter Sutherland töt de leste Norn sprekker mäken op et eilaand Unst<ref>P. Sture Ureland, George Broderick, eds., ''Language contact in the British Isles: proceedings of the Eighth International Symposium on Language Contact in Europe, Douglas, Isle of Man, 1988'' (M. Niemeyer, 1991), p. 455</ref>.
 
 == Verwiezings ==
 <references />
