*Empty MediaWiki Message*

--- a/Verzörgingsplaats_Haorste.mw
+++ b/Verzörgingsplaats_Haorste.mw
@@ -1,7 +1,7 @@
 [[ofbeelding:A28 Verzorgingsplaats Haerst.JPG|thumb|500px|Foto van verzörgingsplääts Haorste]]
 De '''Verzörgingsplääts Haorste '''is een parkeerpläätse en [[tankstation]] an de [[Rieksweg 28|A28]]. [[Verzörgingspläätse|Verzörgingsplääts]] Haorste is vanuut het noorden beriekbaor (vanuut [[Stappest]]).
 
-De Haorsterbroekweg (Haersterbroekweg) gaot krek ten zuden van de verzörgingspläätse toe oaver de A28 hen. Ten oosten van de A28 lig de [[polder]] [[Haorstermarkte]]. Ten zuden van de verzörgingsplääts he-j de [[Ansluuting Ommen (A28)|ansluuting Ommen]], nao et noorden hen [[ansluuting Ni'jluzen]] De verzörgingspläätse is tegelieke met de A28 in [[1970]] lös edaone. Sunds de verzörgingspläätse lös edaone is, is er niks belangrieks meer veranderd an de verzörgingspläätse. Ook niet toen de A28 verbreed wier nao drie riejstroken in [[2010]]/[[2011]]. De rechter riejbaan van de A28 lig oaver het edempte [[Lichtmiskenaol]]. Er kunt zo'n därtien vrachtwagens op de verzörgingspläätse staon.<ref>Wegenwiki.nl</ref>
+De Haorsterbroekweg (Haersterbroekweg) gaot krek ten zuden van de verzörgingspläätse toe oaver de A28 hen. Ten oosten van de A28 lig de [[polder]] [[Haorstermarkte]]. Ten zuden van de verzörgingsplääts he-j de [[Ansluuting Ommen (A28)|ansluuting Ommen]], nao et noorden hen [[ansluuting Ni'jluzen]]. De verzörgingspläätse is tegelieke met de A28 in [[1970]] lös edaone. Sunds de verzörgingspläätse lös edaone is, is er niks belangrieks meer veranderd an de verzörgingspläätse. Ook niet toen as de A28 verbreed wier nao drie riejstroken in [[2010]]/[[2011]]. De rechter riejbaan van de A28 lig oaver het edempte [[Lichtmiskenaol]]. Er kunt zo'n därtien vrachtwagens op de verzörgingspläätse staon.<ref>Wegenwiki.nl</ref>
 
 == Verwiezings ==
 <references/>
