*Empty MediaWiki Message*

--- a/Hessenpoorte.mw
+++ b/Hessenpoorte.mw
@@ -18,7 +18,7 @@
 |verkeersoader=[[Rieksweg 28|A28]], [[N340]], [[N758]]
 |ofbeelding2=Map - NL - Zwolle - Wijk 40 Berkum - Buurt 40 Bedrijventerrein Hessenpoort.svg
 }}
-De '''Hessenpoorte''' ([[Zwols]]: ''Essenpoorte'', [[Nederlaands]]: ''Hessenpoort'') is een [[buurt]] en [[bedrieventerrein]] in de [[Zwolle|Zwolse]] wiek [[Barkum (wiek)|Bärkum]]. De westgreanze van de buurte is de snelweg [[Rieksweg 28|A28]], de [[ansluting Ommen (A28)|ansluting Ommen]] lig körtbi'j de Hessenpoorte. Zowal de [[spoorlien Zwolle-Meppel]] als de [[N758]] naor het [[Roetenvene|Roetenveane]] en [[Ni'jlusen]] loopt deur de Hessenpoorte hen. 
+De '''Hessenpoorte''' ([[Zwols]]: ''Essenpoorte'', [[Nederlaands]]: ''Hessenpoort'') is een [[buurt]] en [[bedrieventerrein]] in de [[Zwolle|Zwolse]] wiek [[Barkum (wiek)|Bärkum]]. De westgreanze van de buurt is de snelweg [[Rieksweg 28|A28]], de [[ansluting Ommen (A28)|ansluting Ommen]] lig körtbi'j de Hessenpoorte. Zowal de [[spoorliende Zwolle-Meppel]] as de [[N758]] nao het [[Roetenvene|Roetenveane]] en [[Ni'jlusen]] gaot deur de Hessenpoorte hen. 
 
 In [[februari]] [[2015]] wier er een vestiging van [[IKEA]] lös edaone, nao jaoren van vertragink. IKEA had nämelik al plannen in het ende van [[2007]] um een IKEA vestiging in [[Zwolle]] neer te zetten. Naost de IKEA bint er ook een bulte aandere bedrieven te vinden op het bedrieventerrein, waoronder [[DHL]], [[Wehkamp]], [[Kuehne Nagel]] en J.E. Storkair. Ook het hotel [[Van der Valk]] is op de Hessenpoorte te vinden.
 
