*Empty MediaWiki Message*

--- a/Weensum.mw
+++ b/Weensum.mw
@@ -22,13 +22,13 @@
 | ofbeelding2=Map - NL - Zwolle - Wijk 52 Soestweteringlanden - Buurt 00 Windesheim.svg
 }}
 [[Ofbeelding:Zwolle Windesheim Klooster.jpg|thumb|260px|De [[Protestaantse Karke Nederlaand|PKN]]-karke in Weensum, vrogger 't brouwhuus van 't klooster van de [[Congregatie van Weensum]]]]
-'''Weensum''' ([[Nederlaans|Nederlaands]]: ''Windesheim'') is een dörp en buurt in de [[gemiente (bestuur)|gemiente]] [[Zwolle]] in de [[Nederlaand|Nederlaandse]] [[pervincie]] [[Oaveriessel]]. 't Lig ten zuden van Zwolle, een endtien ten oosten van de [[Iessel]]. Op Weensum woont zo'n 800 mèensen. Net buten 't dörp stiet de [[Weensumer meule]] an de [[Pervinciaole weg 337|N337]].
+'''Weensum''' ([[Nederlaans|Nederlaands]]: ''Windesheim'') is een dörp en buurt in de [[gemiente (bestuur)|gemiente]] [[Zwolle]] in de [[Nederlaand|Nederlaandse]] [[pervincie]] [[Oaveriessel]]. 't Lig ten zuden van Zwolle, een endtien ten oosten van de [[Iessel]]. Op Weensum woont zo'n 800 mèensen. Net buten 't dörp stiet de [[Weensumer mölle]] an de [[Pervinciaole weg 337|N337]].
 
 Weensum lig op een [[revierduun]] die evörmd is in 't [[Preboreaol]], een tiedvak binnen 't [[Holoceen]]. De oldste speuren van bewoning stamt uut de [[jonge stientied]].
 
 Töt 1944 stund in 't dörp 't Huus te Weensum. Een [[Geallieerden (Tweede Wereldoorlog)|geallieerde]] bom hef dit Huus verwoest.
 
-Van 1866 töt 1936 had Weensum een [[stesjon Weensum|treinstesjon]] an de spoorliende Dèventer - Zwolle.
+Van 1866 töt 1936 had Weensum een [[stesjon Weensum|treinstesjon]] an de [[spoorliende Zwolle-Deamter]].
 
 ==De Congregatie van Weensum==
 In de late [[Middelieuwen]] stund in Weensum een [[Weensum (kloosterörde)|klooster]]. Van hieruut is de [[Congregatie van Weensum]] ontstaon, de kloostergemienschop van [[Augustienen (kloosterörde)|Augustiener]] [[kanunnik|koorheren]]. 't In 1387 in-ewijde klooster was toonangevend in de religieuze hervörmingsbeweging van de [[Mederne devotie]], naor de ideeën van [[Geert Grote]].
