--- a/Veldhoeke_(Zwolle).mw
+++ b/Veldhoeke_(Zwolle).mw
@@ -15,7 +15,7 @@
 |ofbeelding2=Map - NL - Zwolle - Wijk 40 Berkum - Buurt 20 Veldhoek.svg|oppervlak laand=3,10|oppervlak water=0,11|lokasie=|oppervlak=3,21}}
 '''Veldhoek''' ([[Zwols]]: ''Veld-oek'') is een buurt buurtschop in de gemiente Zwolle. De buurt lig in de wiek [[Bärkum (wiek)|Bärkum]].
 
-Körtbi'j Veldhoek lig de Ni'je Vechte. De Ni'je Vechte is zo rund [[1600]] egraven zodät handel uut [[Westfalen]] ([[Bentheimer zandstien]]) rapper bi'j Zwolle an kon kommen.<ref>https://www.ontdekdeijsseldelta.nl/IJsseldelta/veldhoek/</ref>
+Körtbi'j Veldhoek lig de [[Ni'je]] Vechte. De Ni'je Vechte is zo rund [[1600]] egraven zodät handel uut [[Westfalen]] ([[Bentheimer zandstien]]) rapper bi'j Zwolle an kon kommen vanof de [[Vechte]].<ref>https://www.ontdekdeijsseldelta.nl/IJsseldelta/veldhoek/</ref>
 
 == Galleri'je ==
 <gallery widths="400" heights="400">
