--- a/Haorste.mw
+++ b/Haorste.mw
@@ -30,8 +30,7 @@ Op de olde [[zaandrugge]] (de Doornweg volgt disse zaandrugge) bi'j Haorste ku-j
 == Baodem ==
 Vrogger toen as de ofsluutdiek en et gemaol Streukelerziel nog niet bestunden, was Haorste een zompig gebied ([[broeklaand]]). Er was hier vrogger ok een [[broekbos]] te vinden. De grond is in dielen van Haorste [[Moerige gronden|moerig]], zo umsgelieks ten noorden van de [[Bomhofsplasse]]. Ten zuden van de Bomhofsplasse ku-j [[Eerdgronden|eerdgrond]] vinden, ten westen [[Vaaggronden|vaaggrond]] (kalkloos). Körtbi'j de [[ofslag Ommen]] he-j nog een klein stokkien [[Podzolgronden|podzolgrond.]] In het noorden he-j ok nog ([[Eerdveanegronden|eerd]])[[Vene (grondsoorte)|veanegrond]]. Aandere gronden die a-j in Haorste vinden kunt bint rauwveanegrond en [[Humuspodzolgronden|humuspodzolgrond]]. <ref>Atlas van Oaveriessel: baodemkaorte</ref><ref>Atlas van Oaveriessel: Geomorfologische kaorte</ref> 
 
-De Roeten bint een [[kwel]]<nowiki/>gebied.
-
+De Roeten bint een [[kwel]] gebied.
 
 == Beziensweerdigheden ==
 *[[Graf van Lepejou]]
