--- a/Haorste.mw
+++ b/Haorste.mw
@@ -18,7 +18,7 @@
 |lokasie=
 |oppervlak=13,10
 }}
-'''Haorste''' ([[Zwols]]: ''Öörst'', [[Nederlaands]]: ''Haerst'') is een buurtschop en buurt in de [[gemiente (bestuur)|gemiente]] [[Zwolle]]. Haorste lig in de wiek [[Vechtlaanden]] en maakt daor samen met [[Brink-oek]] en [[Langen-olte]] diel vanuut. In [[2017]] ad Haorste 265 inwoners op een gebied van 13,10 veerkante kilometer. De buurt Haorste is met een bevölkingsdichtheid van 20,2 dunbevolkt. In Haorste woont veural [[boer|boeren]]. Ten oosten van de [[Rieksweg 28|A28]] lig de polder [[Haorstermarkte]]. Töt [[1 augustus]] [[1967]] beheurden Haorste töt de gemiente [[Zwollerkärspel]]. Zo midden in de buurt lig de egraven [[Bomhofsplas]].
+'''Haorste''' ([[Zwols]]: ''Öörst'', [[Nederlaands]]: ''Haerst'') is een buurtschop en buurt in de [[gemiente (bestuur)|gemiente]] [[Zwolle]]. Haorste lig in de wiek [[Vechtlaanden]] en maakt daor samen met [[Brink-oek]] en [[Langen-olte]] diel vanuut. In [[2017]] ad Haorste 265 inwoners op een gebied van 13,10 veerkante kilometer. De buurt Haorste is met een bevölkingsdichtheid van 20,2 dunbevolkt. In Haorste woont veural [[boer|boeren]]. Ten oosten van de [[Rieksweg 28|A28]] lig de polder [[Haorstermarkte]]. Töt [[1 augustus]] [[1967]] beheurden Haorste töt de gemiente [[Zwollerkärspel]]. Zo midden in de buurt lig de egraven [[Bomhofsplas]]. In et westen löp de [[Vechte]].
 
 == Geschiedenisse ==
 Bi'j de [[Bomhofsplas]] in Haorste bint in [[1988]] en [[1989]] resten van [[Neanderthaler]]s evunnen. Een bewärkte vuurstienen [[voestbiele]] uut et [[Vrog-Weichselien|Vrog]]-[[Weichselien]] is er ook evunnen. Disse voestbiele is meer als 74.000 jaor old. Et blik een uuterst zelseme vondst te wean die bewiest dät er al meansen (gien Homo sapiens, de ni'jmoeds, medärne means) waren in et [[Vechtdal]] veurdät er hier ni'jmoedse [[Homo sapiens|meansen]] waren<ref> Atlas van de Vecht, https://issuu.com/provicieoverijssel/docs/atlas_van_de_vecht_lr/56</ref>.
