*Empty MediaWiki Message*

--- a/Götstien.mw
+++ b/Götstien.mw
@@ -1,7 +1,7 @@
 [[ofbeelding:KitchenSink.JPG|thumb|Een götstien]]
-Een '''götstien''' is een bak waor wäter in op-evangen kan wörden. Een götstien is väke verwärkt in een [[anrech]] en baoven de götstien zit de wäterkrane. In een götstien kun ie verschillende dingen doen, waoronder oe haanden en de ofwas wassen en schonemäken. Vrogger wier de götstien van [[härdstien]], [[greniet]], [[pösselein]] emaakt en läter ook van [[roestrvri'j staol]], [[plastic]], [[märmer]], [[beton]], [[netuurstien]] en zölfs van [[holt]]. Nog wier värder vrogger wier de götstien van netuurstien en läter kunststien emaakt. Dit is ook waoras de näme götstien van wegge kump.
+Een '''götstien''' is een bak waor wäter in op-evangen kan wörden. Een götstien is väke verwärkt in een [[anrech]] en baoven de götstien zit de wäterkrane. In een götstien kun ie verschillende dingen doen, waoronder oe haanden en de ofwas wassen en schonemäken. Vrogger wier de götstien van [[härdstien]], [[greniet]], [[pösselein]] emaakt en läter ook van [[roestrvri'j staol]], [[plastic]], [[märmer]], [[beton]], [[netuurstien]] en zölfs van [[holt]]. Nog wier wieder terugge wier de götstien van netuurstien en läter kunststien emaakt. Dit is ook waoras de näme götstien van wegge kump.
 
-Als de ofvoer van de götstien verstöpt zit, kun ie de verstöpping lös preberen te kriegen deur een [[götstienontstopper]] te gebruken.
+As de ofvoer van de götstien verstöpt zit, kun ie de verstöpping lös preberen te kriegen deur een [[götstienontstopper]] te gebruken.
 
 In [[Vlaanderen]] nuumt ze de götstien ook wel pompbak, in Limburg pómpestein.
 
