[[:Kategorie:Beroep]] weg-ehaald; [[:Kategorie:Dokter]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Koezedokter.mw
+++ b/Koezedokter.mw
@@ -26,4 +26,4 @@ Veul meensken hebben een 'koezedokterfobie', dit hoolt in dat ze bange bin om na
 * [http://www.tandartsplein.nl/ TandartsPlein]
 
 [[Kategorie:Stellingwarfs artikel]]
-[[Kategorie:Beroep]]
+[[Kategorie:Dokter]]
