[[:Kategorie:Beroep]] weg-ehaald; [[:Kategorie:Olde ambachten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Stadsumroper.mw
+++ b/Stadsumroper.mw
@@ -21,6 +21,6 @@ Darja van Caluwé uut [[Dordrecht]] is de enige vrouweleke stadsumroper van Nede
 
 
 [[Kategorie:Geschiedenis]]
-[[Kategorie:Beroep]]
+[[Kategorie:Olde ambachten]]
 [[Kategorie:Stad]]
 [[Kategorie:Achterhooks_artikel]]
