--- a/Scheepsjagen.mw
+++ b/Scheepsjagen.mw
@@ -23,4 +23,4 @@ In 1903 wördden de scheepsjagerspenning in-evoerd um 't wark te reguleren. 't J
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
 [[Kategorie:Drèents artikel]]
-[[Kategorie:Beroep]]
+[[Kategorie:Olde ambachten]]
