[[:Kategorie:Skip]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Scheepsjagen.mw
+++ b/Scheepsjagen.mw
@@ -24,3 +24,4 @@ In 1903 wördden de scheepsjagerspenning in-evoerd um 't wark te reguleren. 't J
 
 [[Kategorie:Drèents artikel]]
 [[Kategorie:Olde ambachten]]
+[[Kategorie:Skip]]
