Verwysing nå döärverwyssyde repareerd ([[Schinnen]] nå [[Schinnen (gemeente)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Zelfkaant.mw
+++ b/Zelfkaant.mw
@@ -3,7 +3,7 @@ De '''Zelfkaant''' ([[Duuts]]: ''Selfkant''; [[Limburgs]]: ''Zelfkantj'') is ne 
 
 Van 1949 tot 1963 heurdn de gemeente bie [[Nederlaand]].
 
-t Greanst an de gemeentn [[Echt-Susteren]], [[Schinnen]] (bie [[Doenrade]]), [[Sittard-Geleen]], [[Gangelt]] en [[Wooldvucht]].
+t Greanst an de gemeentn [[Echt-Susteren]], [[Schinnen (gemeente)|Schinnen]] (bie [[Doenrade]]), [[Sittard-Geleen]], [[Gangelt]] en [[Wooldvucht]].
 
 == Plaatsn ==
 * Biesen (''Biesse'')
