[[:Kategorie:Geschiedenis]] weg-ehaald; [[:Kategorie:Geschiedenis van Nederlaand]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Drost.mw
+++ b/Drost.mw
@@ -16,6 +16,6 @@ Ok in de [[Nederlandse Kaapkolonie]] wöd den titel ebruukt. Zo steet in [[Graaf
 *[[Lieste van Landdrosten van Tudderen en Elten]]
 
 [[Kategorie:Achterhooks_artikel]]
-[[Kategorie:Geschiedenis]]
+[[Kategorie:Geschiedenis van Nederlaand]]
 [[Kategorie:Olde ambachten]]
 [[Kategorie:Heerlikheid]]
