+[[Kategorie:Geschiedenis van Tweante]]; +[[Kategorie:Riesn-Hooltn (Tweante)]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Bosjager.mw
+++ b/Bosjager.mw
@@ -4,3 +4,5 @@ Ook is dr in Riessen nog nen oold-bosjaagr, den't det ook as [[Tweantse skeeldna
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Beroep]]
+[[Kategorie:Geschiedenis van Tweante]]
+[[Kategorie:Riesn-Hooltn (Tweante)]]
