[[:Kategorie:Beroep]] weg-ehaald; [[:Kategorie:Olde ambachten]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Bakkiesman.mw
+++ b/Bakkiesman.mw
@@ -25,5 +25,5 @@ Een gezegde dat naor de bakkiesman verwiest, is: ''wat in zien mars hebben'' (wa
 * [http://www.marskramer.nl Marskramer.nl]
 
 [[Kategorie:Stellingwarfs_artikel]]
-[[Kategorie:Beroep]]
+[[Kategorie:Olde ambachten]]
 [[categorie:Werenhuus]]
