--- a/Huang_Xianfan.mw
+++ b/Huang_Xianfan.mw
@@ -25,5 +25,6 @@ Huang Xianfan wör in 1899 geboorn an de Fusui in Guangxi in de Zhuang femilie. 
 
 {{Commons|黄现璠}}
 
+{{DEFAULTSORT:Huang, Xianfan}}
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Historikus]]
