[[:Kategorie:Lichem]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Navvel.mw
+++ b/Navvel.mw
@@ -4,3 +4,4 @@ De '''navvel''' is 't littekken dat achterblef noa 't verdreugn van de navvelstr
 
 [[Kategorie:Zoogdier]]
 [[Kategorie:Dierenanatomie]]
+[[Kategorie:Lichem]]
