Verwysing nå döärverwyssyde repareerd ([[Milt]] nå [[Milt (orgaan)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Boek_(lichem).mw
+++ b/Boek_(lichem).mw
@@ -1,5 +1,5 @@
 [[Bestaand:Grays Anatomy image392.png|thumb|250px|Boek]]
-De '''boek''', '''buuk''' of et '''abdomen''' is bi'j warvelde dieren waoronder de [[mense|meenske]] een holte, de boekholte, die vuld is mit een antal [[orgaan|organen]] die veural te maeken hebben mit de [[spiesvertering]], et anmaeken van [[plasse]] en de [[vortplaanting]]. Organen die echt in de boekholte liggen (zoas de [[maege]], [[lever]], [[milt]] en [[daarm]]) hieten in de [[Nederlaands|Nederlaanse]] medische wereld ''intraperitoneaal''; organen die d'r wel tegenan liggen mar niet echt in de boekholte bin (zoas de [[nier]]en en de [[pankreas]]) hieten ''extraperitoneaal'' (meerstal ''retroperitoneaal''). Een orgaan as de [[uterus]] is een betien een greensgeval. (Et [[peritoneum]] is et vlies dat de boekholte an de binnenkaante en de boekorganen an de butenkaante bedekt.)
+De '''boek''', '''buuk''' of et '''abdomen''' is bi'j warvelde dieren waoronder de [[mense|meenske]] een holte, de boekholte, die vuld is mit een antal [[orgaan|organen]] die veural te maeken hebben mit de [[spiesvertering]], et anmaeken van [[plasse]] en de [[vortplaanting]]. Organen die echt in de boekholte liggen (zoas de [[maege]], [[lever]], [[Milt (orgaan)|milt]] en [[daarm]]) hieten in de [[Nederlaands|Nederlaanse]] medische wereld ''intraperitoneaal''; organen die d'r wel tegenan liggen mar niet echt in de boekholte bin (zoas de [[nier]]en en de [[pankreas]]) hieten ''extraperitoneaal'' (meerstal ''retroperitoneaal''). Een orgaan as de [[uterus]] is een betien een greensgeval. (Et [[peritoneum]] is et vlies dat de boekholte an de binnenkaante en de boekorganen an de butenkaante bedekt.)
 
 De boekholte is van hart en longen ofscheiden deur et [[middenrif]] of ''diafragma'', een spiere in de vorm van een dunne koepelvormige plaete die bi'j saementrekking de [[ribbekaaste]] vergroot ten koste van de [[boekholte]], zodat de longen him vol locht zoegen kunnen. Omdat de boekinhoold amper saemendrokber is zal hierbi'j de boekwaand wat naor buten poelen. (Een [[kesjet]] maekt slaanker ten koste van et beschikbere aosemvolume van de longen.) In et midden van de boek zit de [[naevel]].
 
