[[:Kategorie:Dierenanatomie]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Boek_(lichem).mw
+++ b/Boek_(lichem).mw
@@ -23,3 +23,4 @@ De boekholte is van hart en longen ofscheiden deur et [[middenrif]] of ''diafrag
 
 [[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Lichem]]
+[[Kategorie:Dierenanatomie]]
