[[:Kategorie:Dierenanatomie]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Gatdarm.mw
+++ b/Gatdarm.mw
@@ -18,3 +18,4 @@ De gatdarm is de baosis van de volgende medische onderzeuken:
 
 [[Kategorie:West-Veluws artikel]]
 [[Kategorie:Lichem]]
+[[Kategorie:Dierenanatomie]]
