[[:Kategorie:Dierenanatomie]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Heuwd_(lief).mw
+++ b/Heuwd_(lief).mw
@@ -9,3 +9,4 @@ t Heuwd zorget vuur de [[zintuug|zintuge]] [[geheur]], [[zicht]], [[rökke (zint
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Lichem]]
+[[Kategorie:Dierenanatomie]]
