[[:Kategorie:Dierenanatomie]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Hoantje.mw
+++ b/Hoantje.mw
@@ -33,3 +33,4 @@ t '''Hoantje''' of '''penis''' is t mannelk geslachtsdail van de mìnsk. t Wordt
 
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Lichem]]
+[[Kategorie:Dierenanatomie]]
