[[:Kategorie:Dierenanatomie]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Middenvoutsbain.mw
+++ b/Middenvoutsbain.mw
@@ -5,3 +5,4 @@ Analoog hiermit binnen de [[middenhaandsbain|middenhaandsbainen of metacarpalia]
 
 [[Kategorie:Grunnegs_artikel]]
 [[Kategorie:Lichem]]
+[[Kategorie:Dierenanatomie]]
