döärverwysing nå [[Modderputjen]]

--- a/Navvel.mw
+++ b/Navvel.mw
@@ -1,7 +1,1 @@
-De '''navvel''' is 't littekken dat achterblef noa 't verdreugn van de navvelstrenge. De navvel hef doardeur 'n symboliese betekkenisse van verbinding met 't leven ekreegn. De vörme van de meanslike navvel is ofhaanklik van de wieze woarop as 't littekken vergruit.
-
-{{Dialekt|sdz}}
-
-[[Kategorie:Zoogdier]]
-[[Kategorie:Dierenanatomie]]
-[[Kategorie:Lichem]]
+#DEURVERWIEZING[[Modderputjen]]
