cats von [[navvel]]

--- a/Modderputjen.mw
+++ b/Modderputjen.mw
@@ -12,4 +12,6 @@ Tegensworig dragen de [[deerne|deerns]] oek wel hele korte [[T-hemde]]n waordeur
 * [[boekspieker]]
 
 [[Kategorie:West-Veluws artikel]]
+[[Kategorie:Zoogdier]]
+[[Kategorie:Dierenanatomie]]
 [[Kategorie:Lichem]]
