Verwysing nå döärverwyssyde repareerd ([[Rogge]] nå [[rugge (lief)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Schoere.mw
+++ b/Schoere.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Gray327.png|thumb|300px|Gevrichte van de schoere]]
 De '''schoere''', '''scholder''' of '''schouwer''' is een deel van 't [[meenselijk lichaam]]. De schoere is 't deel van de [[halze]] tot an 't bovenste gedeelte van de [[narms]]. Een meens hef (as 't goed is) an allebeie de kaanten van de kop een schoere zitten.
 
-De schoeren bin één van de meest beweeglijke delen van 't meenselijk lichaam, dit kump veurnamelijk deur 't [[sleutelbeen]] - dit is de verbiending tussen 't [[schoereblad]] en de [[bors]]. De schoeren zörgen veur 't goed functioneren van 't bovenste deel van 't lief en de algemene gezondheid. Deur een goeie schoerehouwige an te nemen veurkump 't klachen mit, onder aandere, de [[rogge]] en [[nekke]].
+De schoeren bin één van de meest beweeglijke delen van 't meenselijk lichaam, dit kump veurnamelijk deur 't [[sleutelbeen]] - dit is de verbiending tussen 't [[schoereblad]] en de [[bors]]. De schoeren zörgen veur 't goed functioneren van 't bovenste deel van 't lief en de algemene gezondheid. Deur een goeie schoerehouwige an te nemen veurkump 't klachen mit, onder aandere, de [[rugge (lief)|rogge]] en [[nekke]].
 
 == Nedersaksisch ==
 * [[Achterhooks]]: ''scho{{small()|a}}lder'', ''skolder''
