[[:Kategorie:Dierenanatomie]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Voot.mw
+++ b/Voot.mw
@@ -29,3 +29,4 @@ De meens is 't eerste [[zoogdier]] dat permenent rechop op zien achterpoten gung
 
 [[Kategorie:West-Veluws_artikel]]
 [[Kategorie:Lichem]]
+[[Kategorie:Dierenanatomie]]
