[[:Kategorie:Dierenanatomie]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Zwil.mw
+++ b/Zwil.mw
@@ -12,3 +12,4 @@ In et Tweants zeent der meardere zegswiezen met zwil.
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Lichem]]
+[[Kategorie:Dierenanatomie]]
