--- a/Gemientelike_herindielings_in_Nederlaand.mw
+++ b/Gemientelike_herindielings_in_Nederlaand.mw
@@ -1,4 +1,4 @@
-[[Bestaand:2019-NL-Gemeenten-basis-2500px.png|thumb|Gemientenaemen en -greenzen per 2019]]
+[[Bestaand:2021-NL-Gemeenten-basis-2500px.png|thumb|Gemientenaemen en -greenzen per 2021]]
 In '''[[Nederlaand]]''' hebben der in de negentiende, en veural in de twintigste ieuw vule '''[[gemientelike herindieling]]s''' west, waorbi'j t antal [[gemiente (bestuur)|gemienten]] stark weerommelopt. 
 
 == Achtergronden ==
@@ -45,6 +45,7 @@ t Verzet vanuut de bevolking tegen herindielings het altied aordig groot west, v
 * [[2017]] - [[Meierijstad]] en [[Slochter]] en [[Grunnen (gemainte)|Grunnen]] (grenskorreksie)
 * [[2018]] - [[Liwwadden (gemiente)|Liwwadden]], [[Midden-Grunnen (gemainte)|Midden-Grunningen]], [[Zuudwest-Frieslaand]], [[Waadhoeke]], [[Westerwolde (gemainte)|Westerwolde]] en [[Zaender|Zevenaar]].
 * [[2019]] - [[Noordoost-Frieslaand]], [[West Betuwe]], [[t Hoogelaand|Et Hogelaand]], [[Grunnen (gemainte)|Stad]], [[Westerkertier (gemainte)|Westerkertier]], [[Beekdaelen]], [[Altenao]], [[Haorlemmermeer]], [[Hooksen Weard|Hoeksche Weerd]], [[Möllenlaanden|Meulelaanden]], [[Noordwiek]] en [[Viefhearenlaanden|Viefheerenlaanden]].
+* [[2021]] - [[Eemsdelta]]
 
 == Kommende herindielings ==
 In de perveensies [[Drenthe]], [[Flevolaand]], [[Limburg (Nederlaand)|Limburg]], [[Overiessel]] en [[Zeelaand]] staon op dit stuit gien herindielings op de agenda. In [[Frieslaand]], [[Gelderlaand]], [[Grunnen (provìnzie)|Grunningen]], [[Noord-Braobaant]], [[Noord-Hollaand]], [[Utrecht (provinsie)|Utrecht]] en [[Zuud-Hollaand]] wordt over herindieling spreuken op de korte of middellange termien.
