*Empty MediaWiki Message*

--- a/Loppersom.mw
+++ b/Loppersom.mw
@@ -1,6 +1,6 @@
 '''Loppersom''' ken meerdere betaikenissen hebben:
 
-* n Dörp en gemainte in de provinzie Grunnen: [[Loppersom (Grunnen)]]
+* n Dörp en vrougere gemainte in de provinzie Grunnen: [[Loppersom (Grunnen)]]
 * n Dörp in Oostfraislaand: [[Loppersum (Oostfraislaand)]]
 
 {{dv}}
