*Empty MediaWiki Message*

--- a/Loppersom_(Grunnen).mw
+++ b/Loppersom_(Grunnen).mw
@@ -21,7 +21,7 @@
 [[Ofbeelding:KerkLoppersum.JPG|thumb|250px|right|Petrus- en Pauluskerk Loppersum]]
 [[Ofbeelding:Kerk Loppersum.jpg|thumb|250px|right|schildering in de kerk van Loppersum]]
 
-'''Loppersom''' ([[Nederlaands]]: ''Loppersum'') is n dörp en n gemainte in de provìnzie [[Grunnen (provìnzie)|Grunnen]]. De gemainte het 9.533 inwoner (1 jannewoari [[2020]]<ref>CBS</ref>)  en beslagt n oppervlak van 111,93 [[vierkante kilometer|km²]].
+'''Loppersom''' ([[Nederlaands]]: ''Loppersum'') is n dörp en n vrougere gemainte in de provìnzie [[Grunnen (provìnzie)|Grunnen]]. De gemainte het 9.533 inwoner (1 jannewoari [[2020]]<ref>CBS</ref>)  en beslagt n oppervlak van 111,93 [[vierkante kilometer|km²]].
 
 t Dörp Loppersom ligt aan de [[Lopster Wijmers]]. In t zentrum stait n schiere [[gotiek|gotische]], gedailtelk [[romanogotisch]]e kruuskèrk, de [[Petrus- en Pauluskèrk]], mit n schier interieur.
 
