*Empty MediaWiki Message*

--- a/N_Daam.mw
+++ b/N_Daam.mw
@@ -20,7 +20,7 @@
 }}{{Titel kleine letter}}
 
 [[Ofbeelding:Appingedam01.jpg|right|250px|thumb|Haangente Keukens]]
-'''n Daam''' (of '''Appengedaam''', oetsproak ''apm-gedaam'', [[Nederlaands]]: Appingedam) is n stad en gemainte in de provìnzie Grunnen. t Is twijde stad van  provìnzie, de eerste is  [[Grunnen (stad)|Stad Grunnen]]. De gemainte beslagt n oppervlak van 24,62 [[vierkaante kilometer|km²]] (woarvan 0,79 km² woater).
+'''n Daam''' (of '''Appengedaam''', oetsproak ''apm-gedaam'', [[Nederlaands]]: Appingedam) is n stad en vrougere gemainte in de provìnzie Grunnen. t Is twijde stad van  provìnzie, de eerste is  [[Grunnen (stad)|Stad Grunnen]]. De gemainte beslagt n oppervlak van 24,62 [[vierkaante kilometer|km²]] (woarvan 0,79 km² woater).
 
 t [[Liest van Nederlaandse ploatsen mit stadsrechten|Stadje]] n Daam, legen aan t [[Damsterdaip]], is de heufdstad van t Ommelaand [[Fivelgo]]. t Is ain van de vaar steden in de provìnzie.
 
