*Empty MediaWiki Message*

--- a/Delfziel.mw
+++ b/Delfziel.mw
@@ -19,7 +19,7 @@
 | websteade = [http://www.delfzijl.nl www.delfzijl.nl]
 }}
 
-'''Delfziel''' ([[Nederlaands]]: ''Delfzijl'') is n vrougere gemainte in de provìnzie [[Grunnen (provìnzie)|Grunnen]]. De hoofdploats het dezulfde noam as gemainte ''Delfziel''. De gemainte Delfziel het 12% van de Nederlaandse chemische industrie op zien grond stoan.
+'''Delfziel''' ([[Nederlaands]]: ''Delfzijl'') is n vrougere gemainte in de provìnzie [[Grunnen (provìnzie)|Grunnen]]. De hoofdploats het dezulfde noam as gemainte ''Delfziel''. De gemainte Delfziel het 12% van de Nederlaandse chemische industrie op zien grond stoan. In [[2021]] is Delfziel, n Daam en Loppersum bie nkander doun in de gemainte [[Emsdelta (gemainte)|Emsdelta]]. 
 
 == Delfziel ==
 Delfziel is n [[haoven|hoavenstad]] in noorden van de provìnzie. t Ligt aan de monden van de [[Ems (revier)|Eems]] en het  grootste industriële hoaven van [[Nederlaand|Noordnederlaand]]. Vanof de 16e aiw wer  hoaven van Delfziel al bruukt.  Betaikent  Delf (''oale noam van t [[Damsterdaip]]'') en ziel (''[[Nederlaands]]: sluis'').
