*Empty MediaWiki Message*

--- a/Loppersom_(Grunnen).mw
+++ b/Loppersom_(Grunnen).mw
@@ -27,6 +27,8 @@ t Dörp Loppersom ligt aan de [[Lopster Wijmers]]. In t zentrum stait n schiere 
 
 De gemainte is voak t [[epizentrum]] van de [[aardbeving|eerdschokken]] as gevolg van de [[bodemdaling|bodemdoalen]] deur de winnen van [[eerdgas]].
 
+In [[2021]] is Delfziel, n Daam en Loppersum bie nkander doun in de gemainte [[Emsdelta (gemainte)|Emsdelta]]. 
+
 == Indailen ==
 De gemainte Loppersom omvat de volgende ploatsen: [[Aikwerd]], [[Aikwerderdraai]], [[Ainum]], [[Froamklap]], [[Garrelsweer]], [[Garsthoezen]], [[Houksmeer]], [[Honderd (Loppersom)|Honderd]], [[Hoezenge]], [[Kolhol]], [[Leerms]], Loppersom, [[Lutjeriep]], [[Lutjewiewerd]], [[Merum]], [[Middelstom]], [[Oosterwiewerd]], [[Startenhoezen]], [[Stedum]], [[Stork (Loppersom)|Stork]], [[Toornwerd]], [[Westeremden]], [[Westerwiewerd]], [[Wirdum (Grunnen)|Wirdum]], [[Wirdumerdraai]], [[t Zaand]], [[Zeeriep]], [[Zieldiek]].
 
