*Empty MediaWiki Message*

--- a/Stappest.mw
+++ b/Stappest.mw
@@ -23,6 +23,7 @@ In disse lieste vin ie bekende mèensen die op Stappest woont, of ewoond hebt.
 <references />
 
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
+{{Oaveriessel}}
 
 [[Kategorie:Drèents artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
