*Empty MediaWiki Message*

--- a/T_Klooster.mw
+++ b/T_Klooster.mw
@@ -1,7 +1,7 @@
 {{Titel kleine letter}}
 '''t Klooster''' kan verwiezen naor:
 
-*[['t Klooster (Aalten)|t Klooster]] - n buurtschap in [[Aalten]].
+*[['t Klooster (Aalten)|t Klooster]] - n buurtschap in Aalten.
 *[[Sint Jansklooster]] - n dörp in Stienwiekerlaand (plaetselik ''t Klooster'' nuumd).
 *[[Klooster]] - n godsdienstig gebouw
 
