*Empty MediaWiki Message*

--- a/Vene_(grondsoorte).mw
+++ b/Vene_(grondsoorte).mw
@@ -139,6 +139,26 @@ Ok veur de anleg van wegen en speurlienden wodt de waeterstand soms leger emeuke
 * [[Zuudlaorderveen]]
 * [[Zwarteveen]]
 |}
+== Nedersaksisch ==
+*[[Achterhoeks]]: 
+*[[Drèents]]:
+** ''vene''
+**''veane''
+**''veine''
+*[[Grunnegs]]:
+*[[Sallands]]: 
+** ''venne'' (oostelik)
+**''veane'' (midden)
+** ''vene'' (westelik)
+*[[Stellingwarfs]]:
+** ''vene''
+*[[Tweants]]:
+** ''venne''
+**''viänne/vjenne'' ([[Vriezenveen]])
+*[[Urkers]]:
+*[[Veluws]]:
+** ''vene''
+**''vean(e)''
 
 == Rifferenties ==
 <references />
