Verwysing nå döärverwyssyde repareerd ([[Engelaand]] nå [[Verienigd Keuninkriek]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Verborgen_Verleden.mw
+++ b/Verborgen_Verleden.mw
@@ -1,7 +1,7 @@
 '''Verborgen Verleden''' ([[Nedersaksisch]]: ''Verbörgen Verleden'') is een [[Nederlaand|Nederlaandse]] televisieserie. In de [[documentaire]] giet elke ofleavering een [[Bekende Nederlaander]] opzuuk nao (een diel) een van zien stamboom en veurolders. Sinds 2019 is er een ook andere värsie hiervan, nämelik de serie ''Verborgen verleden van Nederland'' waor er ekeken wördt nao de geschiedenisse van verskillende plekken in Nederlaand. De serie wördt uut ezunden deur de [[NTR]] op [[NPO 2]] (vrogger [[Nederland 2]]). D serie begun op 26 september [[2010]]. Per 22 mei 2020 bint er 13 seizoenen met 97 ofleaverings. Elke ofleavering duurt zo'n 45 minuten, mangs körter of langer.
 
 == Oorsprong ==
-De serie hef et [[Format (media)|format]] van de [[Engelaand|Engelse]] serie [[Who Do You Think You Are?]]. Hierveur bint de rechen an ekocht in [[2009]] deur de omroep [[Teleac]]. Disse omroep gung kört veur de eerste ofleavering op in de NTR. De serie wördt samen met et [[CBG Centrum voor Familiegeschiedenis]] (töt [[2015]] Centraal Bureau voor Genealogie) emaakt en produceerd deur [[BlazHoffski]].
+De serie hef et [[Format (media)|format]] van de [[Verienigd Keuninkriek|Engelse]] serie [[Who Do You Think You Are?]]. Hierveur bint de rechen an ekocht in [[2009]] deur de omroep [[Teleac]]. Disse omroep gung kört veur de eerste ofleavering op in de NTR. De serie wördt samen met et [[CBG Centrum voor Familiegeschiedenis]] (töt [[2015]] Centraal Bureau voor Genealogie) emaakt en produceerd deur [[BlazHoffski]].
 
 == Ofleaverings ==
 === Seizoen 1 ===
