[[:Kategorie:Televisysery]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Verborgen_Verleden.mw
+++ b/Verborgen_Verleden.mw
@@ -310,3 +310,5 @@ De serie hef et [[Format (media)|format]] van de [[Verienigd Keuninkriek|Engelse
 <references/>
 
 {{Dialekt|sdz}}
+
+[[Kategorie:Televisysery]]
