--- a/Verborgen_Verleden.mw
+++ b/Verborgen_Verleden.mw
@@ -312,3 +312,4 @@ De serie hef et [[Format (media)|format]] van de [[Verienigd Keuninkriek|Engelse
 {{Dialekt|sdz}}
 
 [[Kategorie:Televisysery]]
+[[Kategorie:Nederlaans tillevisiepregramma]]
