Sortering van [[:Kategorie:Tillevisie]] anpasd naor " " ([[Wikipedia:HotCat|HotCat.js]])

--- a/Televisy.mw
+++ b/Televisy.mw
@@ -33,4 +33,4 @@ Der bint verskeidene möägelikheyden üm televisy te künnen untvangen:
 
 {{Dialekt|ovel|[[Une|Üne]]|Nysassiske Skryvwyse}}
 
-[[Kategorie:Tillevisie]]
+[[Kategorie:Tillevisie| ]]
