--- a/Breaking_Bad.mw
+++ b/Breaking_Bad.mw
@@ -14,4 +14,4 @@ De serie wörd oet ezeundn in de Verenigde Stoaten en [[Kanada]] op t kabelkanaa
 * [http://www.imdb.com/title/tt0903747/ Breaking Bad op IMDb]
 
 [[Kategorie:Tweants artikel]]
-[[Kategorie:Tillevisiepregramma]]
+[[Kategorie:Televisysery]]
