[[:Kategorie:Tillevisiepregramma]] weg-ehaald; [[:Kategorie:Televisysery]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Family_Guy.mw
+++ b/Family_Guy.mw
@@ -29,4 +29,4 @@ Der is juust bekend emaakt dat der in [[2012]]/[[2013]] n 11e seizoon van Family
 
 {{Dialekt|act||Algemene Nedersaksiese Schriefwieze}}
 
-[[Kategorie:Tillevisiepregramma]]
+[[Kategorie:Televisysery]]
