Verwysing nå döärverwyssyde repareerd ([[Ierland]] nå [[Ierlaand (eilaand)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Family_Guy.mw
+++ b/Family_Guy.mw
@@ -19,7 +19,7 @@ Der is juust bekend emaakt dat der in [[2012]]/[[2013]] n 11e seizoon van Family
 * Barbara Pewterschmidt (in-espreuken deur [[Alex Borstein]]) is de mo van Lois en de vrouw van Carter
 * Francis Griffin (in-espreuken deur [[Charles Durning]]) is den stiefva van Peter. Hiej is nen arg to-ewieden Reums-[[Katteliek]], hiej hef de skurft an Lois umdat ziej [[protestants]] is. Francis had wark in nen metaalfabriek, maor nao zien kotte [[pensioen]] wier hiej liefwacht van den [[Paus]]. Op Megs 17e verjaordag probeert Peter zat en verkleed as kloun met nen eenwieler van de trappe af te riejen. Hiej völt  recht op Francis dee later in t [[krankenhuus]] oet de tied kump. Ziene leste woorden waren: "Peter... you're a fat stinking drunk"
 * Thelma Griffin (in-espreuken deur [[Phyllis Diller]]) is den kettenrokende ex-vrouwe van Francis en mo van Peter. Anders as Francis is ziej vrendelik en kan ziej good met Lois aoverweg. In de aflevering "Mother Tucker" vönk ziej ne relaatsie an met Tom Tucker, maor ziej gaot in dezelfde aflevering weer uut mekare. 
-* Mickey McFinnigan (in-espreuken deur Seth MacFarlane) is den biologiesen va van Peter. In de aflevering "Peter's two dads" ontdekt Peter dat Francis neet zienen echte va is. Hiej geet daornao op zuuk naor zienen echten va. Zien mo vertelt m dat ziej 40 jaor terugge op vekaansie was egaon naor [[Ierland]] en daor Mickey had leren kennen.
+* Mickey McFinnigan (in-espreuken deur Seth MacFarlane) is den biologiesen va van Peter. In de aflevering "Peter's two dads" ontdekt Peter dat Francis neet zienen echte va is. Hiej geet daornao op zuuk naor zienen echten va. Zien mo vertelt m dat ziej 40 jaor terugge op vekaansie was egaon naor [[Ierlaand (eilaand)|Ierland]] en daor Mickey had leren kennen.
 
 == Naobers ==
 === Familie Brown ===
