[[:Kategorie:Tillevisiepregramma]] weg-ehaald; [[:Kategorie:Televisysery]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Mr._Robot_(televisysery).mw
+++ b/Mr._Robot_(televisysery).mw
@@ -16,4 +16,4 @@ De serie volget Elliot Alderson, nen jongen kearl in [[Niej-York]] Stad. Hee woa
 <references/>
 
 [[Kategorie:Tweants artikel]]
-[[Kategorie:Tillevisiepregramma]]
+[[Kategorie:Televisysery]]
