--- a/Smallville.mw
+++ b/Smallville.mw
@@ -46,4 +46,4 @@ Smallville is veurnamelik efilmd in en rondumme [[Vancouver]] in [[Brits-Kolumbi
 
 {{Dialekt|wvel}}
 
-[[Kategorie:Tillevisiepregramma]]
+[[Kategorie:Televisysery]]
