--- a/Supernatural.mw
+++ b/Supernatural.mw
@@ -93,4 +93,4 @@ Elke oflevering is een op zichzelf staond verhaol, mar draag oek bie an de lange
 * [http://www.itv.com/supernatural ''Supernatural'' op itv.com]
 
 [[Kategorie:West-Veluws artikel]]
-[[Kategorie:Tillevisiepregramma]]
+[[Kategorie:Televisysery]]
