[[:Kategorie:Tillevisiepregramma]] weg-ehaald; [[:Kategorie:Televisysery]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/The_Simpsons.mw
+++ b/The_Simpsons.mw
@@ -54,4 +54,4 @@ Naost de oofdpersonages binnen d'r ok aorig wat angere personages.
 
 {{Dialekt|urs|Urker spelling|}}
 
-[[Kategorie:Tillevisiepregramma]]
+[[Kategorie:Televisysery]]
