--- a/Tillevisiefilm.mw
+++ b/Tillevisiefilm.mw
@@ -9,4 +9,4 @@ Een variaant op 'e tillevisiefilm is de ''drekt-naor-video''-film, waorbi'j een 
 Vanof 1999 produceerde de Nederlaanse peblieke omroep een prestigieuze reeks tillevisiefilms waor alle omroepen an mitwarkten. Disse wodden [[Telefilms]] nuumd. Bekende Telefilms bin [[Suzy Q]], [[Cloaca]], [[Familie (tillevisie)|Familie]], [[Het Schnitzelparadijs]] en [[Bolletjes Blues]].
 
 [[Kategorie:Stellingwarfs artikel]]
-[[Kategorie:Tillevisie]]
+[[Kategorie:Tillevisiepregramma|*]]
