--- a/Tillevisiefilm.mw
+++ b/Tillevisiefilm.mw
@@ -6,7 +6,7 @@ Tillevisiefilms wodden soms bruukt as de eerste oflevering van een ni'je tillevi
 
 Een variaant op 'e tillevisiefilm is de ''drekt-naor-video''-film, waorbi'j een film ok niet in de bioskoop vertoond wodt, mar drekt op [[video]] verschient.
 
-Vanof 1999 produceerde de Nederlaanse peblieke omroep een prestigieuze reeks tillevisiefilms waor alle omroepen an mitwarkten. Disse wodden [[Telefilms]] nuumd. Bekende Telefilms bin [[Suzy Q]], [[Cloaca]], [[Familie (tillevisie)|Familie]], [[Het Schnitzelparadijs]] en [[Bolletjes Blues]].
+Vanof 1999 produceerde de Nederlaanse peblieke omroep een prestigieuze reeks tillevisiefilms waor alle omroepen an mitwarkten. Disse wodden [[Telefilm|telefilms]] nuumd. Bekende telefilms bin [[Suzy Q]], [[Cloaca]], [[Familie (tillevisie)|Familie]], [[Het Schnitzelparadijs]] en [[Bolletjes Blues]].
 
 [[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Tillevisiepregramma|*]]
