--- a/The_Simpsons.mw
+++ b/The_Simpsons.mw
@@ -54,4 +54,5 @@ Naost de oofdpersonages binnen d'r ok aorig wat angere personages.
 
 {{Dialekt|urs|Urker spelling|}}
 
+{{DEFAULTSORT:Simpsons}}
 [[Kategorie:Televisysery]]
