--- a/Mr._Robot_(televisysery).mw
+++ b/Mr._Robot_(televisysery).mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:MR. Robot.png|thumb|400px|Beeldmoark vuur Mr. Robot]]
-'''Mr. Robot''' is ne [[Verenigde Stoaten|Amerikaanse]] [[TV-riege]] oet [[2015]]. Et is nen [[drama (genre)|drama]]-[[thriller (genre)|thriller]] eskrewen duur [[Sam Esmail]].
+'''Mr. Robot''' is ne [[Verenigde Stoaten|Amerikaanse]] [[tv-riege]] oet [[2015]]. Et is nen [[drama (genre)|drama]]-[[thriller (genre)|thriller]] eskrewen duur [[Sam Esmail]].
 
 ==Verloop==
 De serie volget Elliot Alderson, nen jongen kearl in [[Niej-York]] Stad. Hee woarket vuur nen internetbevealigingsbedrief Allsafe as bevealigingsprogrammeur. Hee lid oonder sosjale angst en kliniese nearslachtighead. Zinne gedachtenstreum lik slim te lieden oonder achtervolgingswaan en waanzin. Zinne wieze um met leu in kontakt te kommen is duur ze te [[hacken]], woerduur as hee zik verdan meant op te mutten stellen as nen soort online bewaker. Hee wörd eroonseld duur nen geheimzinnigen [[anarchie|anarchist]] den as zik "Mr. Robot" neumt. Hee wörd lid van "fsociety", den Mr. Robot zin koppel [[hacktivisme|hacktivisten]]. Een van öare doelen is um alle skoolden oet te wisken en zo de machtsverdeling van de wearld wier liek te trekken. Det weelt ze doon duur ene van de grötste [[vakvereniging]]en van de wearld, E Corp (dee as Elliot "Evil Corp" neumt), plat te leggen. Toovallig is E Corp den grötsten klaant van Allsafe.
