*Empty MediaWiki Message*

--- a/Verienigd_Keuninkriek.mw
+++ b/Verienigd_Keuninkriek.mw
@@ -20,7 +20,7 @@
 | laandkode = GBR 
 | til = 44
 }}
-Et '''Verienigd Keuninkriek van Groot-Brittannië en Noord-Ierlaand''' is een laand in [[West-Europa]] legen tussen de [[Noordzee]] en de [[Atlantische Oceaan]]. De heufdstad is [[Londen]]. [[Groot-Brittannië]] ([[Engelaand (regio)|Engelaand]], [[Schotlaand]] en [[Kumrië|Kymrië]]) en [[Noord-Ierlaand]] vormen gezaemelik et Verienigd Keuninkriek van Groot-Brittannië en Noord-Ierland, legen op 'e Britse Eilanen in de [[Noordzee]], in et westen van et [[Europa (continent)|Europese kontinent]]. Kymrië was al een onderdiel van Engeland veurdat dit laand saemengong in 't Verienigd Keuninkriek. Tot 31 jannewaori 2020 was et Verienigd Keuninkriek diel van de [[Europese Unie]]. Op die dag stapten zi'j uut de unie nao vier jaor onderhaandelen over de [[Brexit]], een laandelike stemronde waoruut naor veuren kwam dat zi'j uut de EU wollen.
+Et '''Verienigd Keuninkriek van Groot-Brittannië en Noord-Ierlaand''' is een laand in [[West-Europa]] legen tussen de [[Noordzee]] en de [[Atlantische Oceaan]]. De heufdstad is [[Londen]]. [[Groot-Brittannië]] ([[Engelaand (regio)|Engelaand]], [[Schotlaand]] en [[Kumrië|Kymrië]]) en [[Noord-Ierlaand]] vormen gezaemelik et Verienigd Keuninkriek van Groot-Brittannië en Noord-Ierland, legen op 'e Britse Eilanen in de [[Noordzee]], in et westen van et [[Europa (continent)|Europese kontinent]]. Kymrië was al een onderdiel van Engeland veurdat dit laand saemengong in 't Verienigd Keuninkriek. Tot 31 jannewaori 2020 was et Verienigd Keuninkriek diel van de [[Europese Unie]]. Op die dag stapten zi'j uut de unie nao vier jaor onderhaandelen over de [[Brexit]], een laandelike stemronde waoruut naor veuren kwam dat zi'j uut de EU wollen. Töt 31 december 2020 was er een overganks riegeling met de Europese Unie.
 
 == Indieling ==
 Et Verienigd Keuninkriek bestaot uut twie grote laansdielen:
