*Empty MediaWiki Message*

--- a/Hellmanngetal.mw
+++ b/Hellmanngetal.mw
@@ -34,7 +34,7 @@ Et Helmanngetal wördt berekkend deur de dagen met een gemiddelde temperetuur le
 |Streng
 |-
 |H > 201
-|Matoig streng
+|Maotig streng
 |-
 |H > 100
 |Normaol
@@ -104,9 +104,7 @@ De winter van 2013-2014 was de eerste winter sinds minstens 1901 die nul punten 
 |}
 
 ==Verwiezings==
-
 * Lieste van Helmanngetallen in Nederlaand:
 <references/>
-
 * [http://www.wzforum.de/forum2/read.php?6,1453354,1454308 Helmanngetallen vanaf 1750 in Basel, Berlien, Praag, Frankfurt, Dresden, etc.]
 {{Dialekt|sdz}}
